--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
@@ -1,8 +1,7 @@
 classes:
 - system.salt.control.virt
-- system.salt.control.cluster.opencontrail_analytics_cluster
-- system.salt.control.cluster.opencontrail_control_cluster
 - system.salt.control.cluster.openstack_control_cluster
+- system.salt.control.cluster.openstack_gateway_single
 - system.salt.control.cluster.openstack_proxy_single
 - system.salt.control.cluster.openstack_database_cluster
 - system.salt.control.cluster.openstack_message_queue_cluster
@@ -30,6 +29,11 @@ parameters:
           disk_profile: small
           net_profile: default
         openstack.proxy:
+          cpu: 4
+          ram: 8192
+          disk_profile: small
+          net_profile: default
+        openstack.gateway:
           cpu: 4
           ram: 8192
           disk_profile: small
