--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/config.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/config.yml
@@ -1,14 +1,13 @@
 classes:
 - system.linux.system.repo.tcp_salt
 - system.openssh.client.lab
-- system.salt.master.git
+- system.salt.master.pkg
 - system.salt.minion.pki.authority
 - system.reclass.storage.salt
-- system.reclass.storage.system.physical_control_full
-- system.reclass.storage.system.opencontrail_analytics_cluster
-- system.reclass.storage.system.opencontrail_control_cluster
+- system.reclass.storage.system.physical_control_cluster
 - system.reclass.storage.system.openstack_control_cluster
 - system.reclass.storage.system.openstack_proxy_single
+- system.reclass.storage.system.openstack_gateway_single
 - system.reclass.storage.system.openstack_database_cluster
 - system.reclass.storage.system.openstack_message_queue_cluster
 - system.reclass.storage.system.stacklight_log_cluster
@@ -17,8 +16,8 @@ classes:
 - cluster.mk24_qa_baremetal_vlan_dvr
 parameters:
   _param:
-    salt_master_base_environment: dev
-    reclass_data_repository: "https://github.com/Mirantis/mk-lab-salt-model.git"
+    salt_master_base_environment: prd
+    reclass_data_repository: "https://github.com/TimurNurlygayanov/mk24qa-salt-models.git"
     reclass_data_revision: master
     reclass_config_master: ${_param:fuel_config_deploy_address}
     single_address: ${_param:fuel_config_address}
@@ -26,6 +25,8 @@ parameters:
     salt_master_host: ${_param:fuel_config_address}
   reclass:
     storage:
+      data_source:
+        engine: local
       node:
         openstack_control_node01:
           classes:
@@ -33,9 +34,6 @@ parameters:
         openstack_database_node01:
           classes:
           - cluster.${_param:cluster_name}.openstack.database_init
-  reclass:
-    storage:
-      node:
         openstack_compute_node01:
           name: cmp01
           domain: ${_param:cluster_domain}
@@ -44,7 +42,6 @@ parameters:
           params:
             salt_master_host: ${_param:reclass_config_master}
             linux_system_codename: trusty
-            control_address: ${_param:openstack_compute_node01_control_address}
             single_address: ${_param:openstack_compute_node01_single_address}
         openstack_compute_node02:
           name: cmp02
@@ -54,7 +51,6 @@ parameters:
           params:
             salt_master_host: ${_param:reclass_config_master}
             linux_system_codename: trusty
-            control_address: ${_param:openstack_compute_node02_control_address}
             single_address: ${_param:openstack_compute_node02_single_address}
         openstack_compute_node03:
           name: cmp03
@@ -64,7 +60,6 @@ parameters:
           params:
             salt_master_host: ${_param:reclass_config_master}
             linux_system_codename: trusty
-            control_address: ${_param:openstack_compute_node03_control_address}
             single_address: ${_param:openstack_compute_node03_single_address}
         openstack_compute_node04:
           name: cmp04
@@ -74,5 +69,4 @@ parameters:
           params:
             salt_master_host: ${_param:reclass_config_master}
             linux_system_codename: trusty
-            control_address: ${_param:openstack_compute_node04_control_address}
             single_address: ${_param:openstack_compute_node04_single_address}
