--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
@@ -68,4 +68,44 @@ parameters:
           node:
             prx02:
               provider: kvm03.${_param:cluster_domain}
-          
+  linux:
+    network:
+      interface:
+        p4p1:
+          enabled: true
+          type: eth
+          mtu: 9000
+        p4p2:
+          enabled: true
+          type: slave
+          mtu: 9000
+          master: bond0
+        bond0:
+          enabled: true
+          type: bond
+          use_interfaces:
+          - p4p2
+          slaves: p4p2
+          mode: active-backup
+        bond0.100:
+          enabled: true
+          type: vlan
+          proto: manual
+          mtu: 9000
+          use_interfaces:
+          - bond0
+        br0:
+          enabled: true
+          type: bridge
+          address: ${_param:deploy_address}
+          netmask: 255.255.255.224
+          use_interfaces:
+          - p4p1
+        br100:
+          enabled: true
+          type: bridge
+          address: ${_param:single_address}
+          netmask: 255.255.255.0
+          mtu: 9000
+          use_interfaces:
+          - bond0.100
