--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/init.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/init.yml
@@ -54,6 +54,7 @@ parameters:
     opencontrail_control_node02_address: 10.167.4.22
     opencontrail_control_node03_address: 10.167.4.23
     # stacklight service addresses
+    stacklight_environment: test
     stacklight_monitor_address: 10.167.4.70
     stacklight_monitor_node01_address: 10.167.4.71
     stacklight_monitor_node02_address: 10.167.4.72
@@ -67,11 +68,8 @@ parameters:
     stacklight_telemetry_node02_address: 10.167.4.87
     stacklight_telemetry_node03_address: 10.167.4.88
     # openstack compute
-    openstack_compute_node01_single_address: 10.167.4.101
-    openstack_compute_node02_single_address: 10.167.4.102
-    openstack_compute_node03_single_address: 10.167.4.103
-    openstack_compute_node04_single_address: 10.167.4.104
-    openstack_compute_node05_single_address: 10.167.4.105
+    openstack_compute_node01_single_address: 10.167.4.105
+    openstack_compute_node02_single_address: 10.167.4.106
 
     # Interface definitions
     linux_dhcp_interface:
