--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
@@ -4,7 +4,7 @@ classes:
 - system.memcached.server.single
 - system.keystone.server.cluster
 - system.glance.control.cluster
-- system.neutron.openvswitch.cluster
+- system.neutron.control.openvswitch.cluster
 - system.nova.control.cluster
 - system.cinder.control.cluster
 - system.cinder.volume.single
