--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/fuel/compute.yml
@@ -1,8 +1,7 @@
 classes:
 - system.salt.control.virt
 - system.salt.control.cluster.openstack_control_cluster
-- system.salt.control.cluster.openstack_gateway_single
-- system.salt.control.cluster.openstack_proxy_single
+- system.salt.control.cluster.openstack_proxy_cluster
 - system.salt.control.cluster.openstack_database_cluster
 - system.salt.control.cluster.openstack_message_queue_cluster
 - system.salt.control.cluster.stacklight_server_cluster
@@ -72,6 +71,10 @@ parameters:
         eth0:
           bridge: br100
           model: virtio
+  libvirt:
+    server:
+      enabled: true
+      kvm_pkgs: ['qemu','qemu-utils']
   linux:
     network:
       interface:
