--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/dashboard.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/dashboard.yml
@@ -1,6 +1,6 @@
 classes:
 - system.linux.system.repo.mos9
-- system.linux.system.repo.tcp_mk20
+- system.linux.system.repo.saltstack_2016_3_trusty
 - system.horizon.server.single
 - cluster.mk24_qa_baremetal_vlan_dvr
 parameters:
