--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/database.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/database.yml
@@ -1,6 +1,7 @@
 classes:
 - system.linux.system.repo.mos9
 - system.linux.system.repo.tcp_extra
+- system.linux.system.repo.saltstack_2016_3_trusty
 - system.galera.server.cluster
 - system.galera.server.database.ceilometer
 - system.galera.server.database.cinder
