--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
@@ -1,11 +1,36 @@
 classes:
 - system.linux.system.repo.mos9
 - system.linux.system.repo.tcp_extra
+- system.linux.system.repo.saltstack_2016_3_trusty
 - system.neutron.gateway.cluster
-- cluster.mk24_qa_baremetal_vlan_dvr.openstack._network
 - cluster.mk24_qa_baremetal_vlan_dvr
 parameters:
   _param:
-    interface_mtu: 9000
+    interface_mtu: 1500
     neutron_gateway_dvr: True
     neutron_gateway_agent_mode: dvr_snat
+    cluster_vip_address: ${_param:openstack_control_address}
+  neutron:
+    gateway:
+      local_ip: ${_param:single_address}
+      backend:
+        tenant_vlan_range: "1801:1849"
+      database:
+        host: ${_param:openstack_database_address}
+      message_queue:
+        host: ${_param:openstack_message_queue_address}
+  linux:
+    network:
+      interface:
+        eth1:
+          enabled: true
+          type: slave
+          mtu: 9000
+          master: bond0
+        bond0:
+          enabled: true
+          type: bond
+          use_interfaces:
+          - eth1
+          slaves: eth1
+          mode: active-backup
