--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/proxy.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/proxy.yml
@@ -1,5 +1,6 @@
 classes:
 - system.linux.system.repo.mos9
+- system.linux.system.repo.saltstack_2016_3_trusty
 - system.nginx.server.single
 - system.nginx.server.proxy.opencontrail_web
 - system.nginx.server.proxy.openstack_api
