--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
@@ -23,6 +23,7 @@ parameters:
     cluster_node02_address: ${_param:openstack_control_node02_address}
     cluster_node03_hostname: ctl03
     cluster_node03_address: ${_param:openstack_control_node03_address} 
+    metadata_password: workshop
   linux:
     network:
       interface:
