fixes in network

--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
@@ -21,6 +21,7 @@ parameters:
         host: ${_param:openstack_message_queue_address}
   linux:
     network:
+      bridge: openvswitch
       interface:
         em2:
           enabled: true
