--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
@@ -28,16 +28,47 @@ parameters:
           - host: ${_param:openstack_control_node03_address}
   linux:
     network:
+      bridge: openvswitch
       interface:
-        eth1:
+        p4p2:
           enabled: true
           type: slave
           mtu: 9000
           master: bond0
         bond0:
           enabled: true
+          proto: manual
+          ovs_bridge: br-floating
+          ovs_type: OVSPort
           type: bond
           use_interfaces:
-          - eth1
-          slaves: eth1
+          - p4p2
+          slaves: p4p2
           mode: active-backup
+          mtu: 9000
+        br-floating:
+          enabled: true
+          type: ovs_bridge
+        br-prv:
+          enabed: true
+          type: ovs_bridge
+        br-mgmt:
+          enabled: true
+          type: ovs_port
+          bridge: br-floating
+          proto: static
+          ovs_options: tag=1800
+          address: ${_param:single_address}
+          netmask: 255.255.255.0
+        floating-to-prv:
+          enabled: true
+          type: ovs_port
+          port_type: patch
+          bridge: br-floating
+          peer: prv-to-floating
+        prv-to-floating:
+          enabled: true
+          type: ovs_port
+          port_type: patch
+          bridge: br-prv
+          peer: floating-to-prv
