improvements for neutron definitions

--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/control.yml
@@ -35,11 +35,14 @@ parameters:
   neutron:
     server:
       backend:
-        tenant_vlan_range: "1801:1849"
+        tenant_vlan_range: "${_param:neutron_tenant_vlan_range}"
     database:
       host: ${_param:openstack_database_address}
     message_queue:
-      host: ${_param:openstack_message_queue_address}
+      members:
+        - host: ${_param:openstack_control_node01_address}
+        - host: ${_param:openstack_control_node02_address}
+        - host: ${_param:openstack_control_node03_address}
   keystone:
     server:
       region: ${_param:openstack_region}
