--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/gateway.yml
@@ -43,7 +43,7 @@ parameters:
           enabled: true
           type: ovs_bridge
         br-prv:
-          enabed: true
+          enabled: true
           type: ovs_bridge
         br-mgmt:
           enabled: true
