--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/database.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/database.yml
@@ -10,6 +10,7 @@ classes:
 - system.galera.server.database.heat
 - system.galera.server.database.keystone
 - system.galera.server.database.nova
+- system.galera.server.database.neutron
 - cluster.mk24_qa_baremetal_vlan_dvr
 parameters:
   _param:
