--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
@@ -29,7 +29,8 @@ parameters:
     network:
       bridge: openvswitch
       interface:
-        p4p2:
+        primary_second_nic:
+          name: ${_param:primary_second_nic}
           enabled: true
           type: slave
           mtu: 9000
@@ -41,8 +42,8 @@ parameters:
           ovs_type: OVSPort
           type: bond
           use_interfaces:
-          - p4p2
-          slaves: p4p2
+          - ${_param:primary_second_nic}
+          slaves: ${_param:primary_second_nic}
           mode: active-backup
           mtu: 9000
         br-floating:
