--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/init.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/init.yml
@@ -5,17 +5,17 @@ parameters:
     openstack_region: RegionOne
     admin_email: root@localhost
     tenant_address: ${_param:single_address} #only for VLAN setup without VXLAN tunnel int
-    neutron_control_dvr: True
+    neutron_control_dvr: False
     neutron_tenant_network_types: "flat,vlan"
-    neutron_l3_ha: False
+    neutron_l3_ha: True
     neutron_global_physnet_mtu: 9000
     neutron_external_mtu: 9000
-    neutron_gateway_dvr: True
-    neutron_gateway_agent_mode: dvr_snat
-    neutron_compute_dvr: True
-    neutron_compute_agent_mode: dvr
-    neutron_compute_external_access: True
-    neutron_tenant_vlan_range: "1810:1849"
+    neutron_gateway_dvr: False
+    neutron_gateway_agent_mode: legacy
+    neutron_compute_dvr: False
+    neutron_compute_agent_mode: legacy
+    neutron_compute_external_access: False
+    neutron_tenant_vlan_range: "1810:1840"
     galera_server_cluster_name: openstack_cluster
     galera_server_maintenance_password: F2yEhgwPxyG6ExMl
     galera_server_admin_password: sJI8rf5YGypAnuf4
