--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/compute.yml
@@ -21,10 +21,6 @@ parameters:
       vncproxy_url: http://${_param:cluster_vip_address}:6080
       notification:
         driver: messagingv2
-  neutron:
-    compute:
-      backend:
-        tenant_vlan_range: "${_param:neutron_tenant_vlan_range}"
   linux:
     network:
       bridge: openvswitch
@@ -46,29 +42,27 @@ parameters:
           slaves: ${_param:primary_second_nic}
           mode: active-backup
           mtu: 9000
-        br-floating:
+        bond0.1800:
           enabled: true
-          type: ovs_bridge
-        br-prv:
-          enabled: true
-          type: ovs_bridge
-        br-mgmt:
-          enabled: true
-          type: ovs_port
-          bridge: br-floating
+          type: vlan
           proto: static
-          ovs_options: tag=1800
           address: ${_param:single_address}
           netmask: 255.255.255.0
-        floating-to-prv:
+          mtu: 9000
+          use_interfaces:
+          - bond0
+        bond0.1801:
           enabled: true
-          type: ovs_port
-          port_type: patch
-          bridge: br-floating
-          peer: prv-to-floating
-        prv-to-floating:
+          type: vlan
+          proto: manual
+          mtu: 9000
+          use_interfaces:
+          - bond0
+        br-mesh:
           enabled: true
-          type: ovs_port
-          port_type: patch
-          bridge: br-prv
-          peer: floating-to-prv
+          type: bridge
+          address: ${_param:tenant_address}
+          netmask: 255.255.255.0
+          mtu: 9000
+          use_interfaces:
+          - bond0.1801
