--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/init.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/init.yml
@@ -18,9 +18,11 @@ parameters:
 
     openstack_gateway_node01_address: 10.167.4.224
     openstack_gateway_node02_address: 10.167.4.225
+    openstack_gateway_node02_address: 10.167.4.226
 
     openstack_gateway_node01_tenant_address: 192.168.50.6
     openstack_gateway_node02_tenant_address: 192.168.50.7
+    openstack_gateway_node03_tenant_address: 192.168.50.8
 
     fuel_compute_node01_address: 10.167.4.241
     fuel_compute_node02_address: 10.167.4.242
