--- a/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/proxy.yml
+++ b/classes/cluster/mk24_qa_baremetal_vlan_dvr/openstack/proxy.yml
@@ -19,6 +19,7 @@ parameters:
       engine: salt
       mode: secure
     cluster_vip_address: ${_param:openstack_control_address}
+    openstack_version: liberty
     salt_minion_ca_host: cfg01.${_param:cluster_domain}
   linux:
     network:
